--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
 
       window.$docsify = {
         alias: {
-          [`${basePath}/saiba-mais/changelog`]:
-            'https://raw.githubusercontent.com/cpsrepositorio/cps-elements/main/CHANGELOG.md',
+          '.*/changelog': 'https://raw.githubusercontent.com/cpsrepositorio/cps-elements/main/CHANGELOG.md',
           '/.*/_sidebar.md': '_sidebar.md'
         },
         auto2top: true,
