--- a/assets/examples/include.html
+++ b/assets/examples/include.html
@@ -1,12 +1,23 @@
 <p style="margin-top: 0">
-  The content in this example was included from
-  <a href="/assets/examples/include.html" target="_blank">a separate file</a>. 🤯
+  O conteúdo deste exemplo foi incluído a partir de
+  <a href="/assets/examples/include.html" target="_blank">um arquivo separado</a>. 🤯
 </p>
+
+<script>
+  const parent = document.querySelector('#include-target');
+  if (parent) {
+    const p = document.createElement('p');
+    p.innerHTML = 'E você só está vendo esta linha pois a propriedade <code>allow-scripts</code> está presente. 🦾';
+    parent.firstElementChild.after(p);
+  }
+</script>
+
 <p>
   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
   aliqua. Lectus vestibulum mattis ullamcorper velit sed ullamcorper morbi. Fringilla urna porttitor rhoncus dolor purus
-  non enim. Nullam vehicula ipsum a arcu cursus vitae congue mauris. Gravida in fermentum et sollicitudin.
+  non enim. Nullam vehicula ipsum a arcu cursus vitae congue mauris.
 </p>
+
 <p>
   Cursus sit amet dictum sit amet justo donec enim. Sed id semper risus in hendrerit gravida. Viverra accumsan in nisl
   nisi scelerisque eu ultrices vitae. Et molestie ac feugiat sed lectus vestibulum mattis ullamcorper velit. Nec
@@ -14,6 +25,7 @@
   faucibus et molestie. A cras semper auctor neque vitae.
 </p>
 
-<script>
-  console.log('This will only execute if the `allow-scripts` prop is present');
-</script>
+<p style="margin-bottom: 0">
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad quos adipisci consequuntur, quo non blanditiis quas
+  numquam eaque facilis atque veniam doloremque beatae amet ipsam iste placeat veritatis pariatur quae!
+</p>
